; ModuleID = '/home/carl/AnghaBench/h2o/deps/yoml/extr_test-yoml.c_parse.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/yoml/extr_test-yoml.c_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*)* @parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @parse(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = call i32 @yaml_parser_initialize(i32* %5)
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @yaml_parser_set_input_string(i32* %5, i32* %9, i32 %11)
  %13 = load i8*, i8** %3, align 8
  %14 = call i32* @yoml_parse_document(i32* %5, i32* null, i32* null, i8* %13)
  store i32* %14, i32** %6, align 8
  %15 = call i32 @yaml_parser_delete(i32* %5)
  %16 = load i32*, i32** %6, align 8
  ret i32* %16
}

declare dso_local i32 @yaml_parser_initialize(i32*) #1

declare dso_local i32 @yaml_parser_set_input_string(i32*, i32*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32* @yoml_parse_document(i32*, i32*, i32*, i8*) #1

declare dso_local i32 @yaml_parser_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
